<resources>
    <string name="app_name">Astrop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body_f1">Nuestra app móvil está diseñada para poder disfrutarla en cualquier momento y lugar. </string>
    <string name="body_f2">Con nuestro modo offline ya sea que estés en casa, en el trabajo o en un viaje, tendrás acceso a una gran cantidad de información y recursos sobre el universo.</string>
    <string name="body_f3">Y lo mejor de todo, podrás hacerlo de manera interactiva y amigable.</string>
    <string name="title_f1">¡Bienvenido a Appstro!</string>
    <string name="title_f2">Descubre los secretos del universo desde la comodidad de tu móvil</string>
    <string name="title_f3">Nuestra app te llevará en un viaje fascinante a través del cosmos</string>
    <string name="prefs_file">idk1</string>
    <string name="sig_in_title">!! Bienvenido a Astrop !!</string>
    <string name="second_op_home">Daily image BY NASA</string>
    <string name="sign_out_home">Sign out</string>
    <string name="icon_help_home">📖 ❔</string>
    <string name="title_home">home</string>
    <string name="title_fav">Favoritos</string>
    <string name="title_user_profile">Profile</string>
    <string name="alert_message">¿Está seguro que desea salir de la aplicación?</string>
    <string name="alert_title">¿Salir?</string>
    <string name="ver_mas">Ver mas</string>
    <string name="key_email">email</string>
    <string name="key_nameU">nameU</string>
    <string name="key_photo_url">imgU</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="date">Date</string>
    <string name="hello">!! Hola %s ¡¡ </string>
    <string name="helptext_astro">↑↑ Selecciona un %s ↑↑ </string>
    <string name="helptext_galaxi">↑↑ Selecciona una %s ↑↑ </string>
    <string name="home_help">Selecciona un astro!</string>
    <string name="home_curiosities">Cada día, se muestra una imagen o foto diferente del nuestro universo, con una corta explicación escrita por un astrónomo profesional</string>
    <string name="curiosities">Curiosidades…</string>
    <string name="user_profile">Profile</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the electronic typesetting, remaining essentially unchanged. It was popularised inthe 1960s with the release of Letraset sheets containing Lorem Ipsum passages,and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="title_astro_type">Tipos</string>
    <string name="favorites"> … </string>
    <string name="title_astro_type_grid">Selecciona un tipo de astro …</string>
    <string name="astroTypeList">"Astros "</string>
    <string name="title_composition">"Composicion principal : %s "</string>
    <string name="distance_astro">Distancia : %f  km</string>
    <string name="home_title_2">Accede a información relevante sobre las estrellas</string>
    <string name="home_title_3">Conoce a nuestros planetas vecinos </string>
    <string name="see_more">Ver más</string>
    <string name="name_astro">Nombre : %s </string>
    <string name="type_astro">Tipo : %s</string>
    <string name="home_detail">! Mas informacion en la secion de tipos de astro¡</string>
    <string name="picture_of_the_day_home">"Imagen del día "</string>
    <string name="mail">Correo</string>
    <string name="name">Nombre</string>
    <string name="user">Usuario</string>
    <string name="sing_out">sing out</string>
    <string name="nameuser">Usuario : %s</string>
    <string name="useremail">Correo : %s</string>
    <string name="loading">Cargando ..</string>

</resources>

