<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/daily_image_fg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dailyImage.DailyImageFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/bg_daily" />
    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:shimmer_base_alpha=".85"
        app:shimmer_duration="1700">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_daily"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:text="@string/picture_of_the_day"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toTopOf="@id/body"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintVertical_chainStyle="packed"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/black"
                        app:cardCornerRadius="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title"
                        app:layout_constraintVertical_bias="0.0">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/black">


                            <ImageView
                                android:id="@+id/imageView_b"
                                android:layout_width="match_parent"
                                android:layout_height="250dp"
                                android:layout_marginBottom="10dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/space"
                                app:layout_constraintBottom_toTopOf="@id/text_description"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.07"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0" />


                            <TextView
                                android:id="@+id/title_article"
                                style="@style/Title_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="32dp"
                                android:layout_marginTop="16dp"
                                android:text="@string/app_name"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="italic"
                                app:layout_constraintBottom_toTopOf="@id/date"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/imageView_b" />

                            <TextView
                                android:id="@+id/date"
                                style="@style/Title_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="32dp"
                                android:layout_marginBottom="16dp"
                                android:text="@string/loading"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:textStyle="italic"
                                app:layout_constraintBottom_toTopOf="@id/text_description"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/imageView_b"
                                app:layout_constraintVertical_chainStyle="packed" />

                            <TextView
                                android:id="@+id/text_description"
                                style="@style/Title_detail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="30dp"
                                android:ellipsize="end"
                                android:lineSpacingExtra="10dp"
                                android:maxLines="6"
                                android:text="@string/lorem"

                                android:textAlignment="textStart"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="italic"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/date"

                                />

                            <TextView
                                android:id="@+id/seemore"
                                style="@style/Title_detail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20dp"
                                android:alpha="0.7"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:text="@string/see_more"
                                app:layout_constraintTop_toBottomOf="@id/text_description" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>



        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>



</FrameLayout>