<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/daily_image_fg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dailyImage.DailyImageFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/bg_daily" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_daily"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/pictute_of_the_day"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@id/daily_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed"
                tools:textColor="@color/black" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/daily_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginBottom="8dp"
                tools:src="@drawable/ic_launcher"
                app:layout_constraintBottom_toTopOf="@id/body_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintVertical_chainStyle="packed" />

            <ScrollView
                android:id="@+id/body_container"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="#77000000"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/daily_image">

                <TextView
                    android:id="@+id/body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="12dp"
                    android:maxLines="7"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    tools:text="@string/body_f2" />

            </ScrollView>

            <TextView
                android:id="@+id/see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_mas"
                android:textColor="#9FF4BDBD"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/body_container"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/date_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="16dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                tools:text="@string/date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:layout_goneMarginBottom="30dp"
                tools:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="40dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>